Create an Android library that displays jokes

--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -48,5 +48,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation project(':jokeProvider')
+    implementation project(':jokeDisplay')
 
 }
