Add flavor specific dependency

--- a/FinalProject/app/src/free/AndroidManifest.xml
+++ b/FinalProject/app/src/free/AndroidManifest.xml
@@ -10,5 +10,10 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <!--Add AdMob app iD -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id"/>
     </application>
+
 </manifest>
