--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -38,7 +38,8 @@ android {
     }
     sourceSets {
         main { java.srcDirs = ['src/main/java', 'src/androidTest/java'] } 
-        free {java.srcDirs = ['src/free/java', 'src/free/java/']
+        free {
+            java.srcDirs = ['src/free/java', 'src/free/java/']
             manifest.srcFile 'src/free/AndroidManifest.xml'}
     }
 
@@ -66,10 +67,12 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
-    implementation 'com.google.code.findbugs:jsr305:3.0.1'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    //The add dependency is specific to the free flavor
+    freeImplementation 'com.google.android.gms:play-services-ads:17.2.0'
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
