--- a/FinalProject/jokeDisplay/src/main/AndroidManifest.xml
+++ b/FinalProject/jokeDisplay/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.jokedisplay">
 
     <application>
-        <activity android:name=".JokeDisplayActivity"></activity>
+        <activity android:name=".JokeDisplayActivity" />
     </application>
 
 </manifest>
